# hermes-agent

./: LOCAL_CUSTOMIZATION_MIGRATION.md  cli.py  hermes_state.py  toolsets.py
agent/: conversation_compression.py  (+2 more)
integrations/system-b-media-analysis/: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
integrations/system-b-media-analysis/docs/: reapply.md
integrations/system-b-media-analysis/docs/plans/: 2026-06-01-system-b-source-centric-upgrade.md
integrations/system-b-media-analysis/integrations/hermes-hooks/: README.md
integrations/system-b-media-analysis/integrations/hermes-hooks/lib/: state.py
integrations/system-b-media-analysis/integrations/hermes-hooks/media-analysis-intake/: HOOK.yaml  handler.py
integrations/system-b-media-analysis/integrations/hermes-hooks/media-analysis-z-backend/: HOOK.yaml  handler.py
integrations/system-b-media-analysis/live-media-analysis-lib/: state.py  system_b_backend_smoke.py  url_norm.py
integrations/system-b-media-analysis/media_backend/: __init__.py  adapters.py  cli.py  detector.py  downloader.py  extractor.py  index_cli.py  index_store.py  manifest.py  storage.py
integrations/system-b-media-analysis/references/: pipeline.md  transcript-status.md
integrations/system-b-media-analysis/scripts/: download_reel.ps1  extract_media.ps1  test_pipeline.ps1
integrations/system-b-media-analysis/tests/: test_adapters.py  test_backend_hook.py  test_cli.py  test_detector.py  test_downloader.py  test_extractor.py  test_index_cli.py  test_index_store.py  test_intake_hook.py  test_manifest.py  test_storage.py
(+46 files in other folders)
