[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-reel-analyzer"
version = "0.2.0"
description = "Linux/WSL media download and extraction backend for System B"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "gallery-dl>=1.27.0",
]

[project.scripts]
media-dl = "media_backend.cli:entry_point"
system-b-index = "media_backend.index_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["media_backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
